# iramuteq_lite_v0_2beta_mac

./: .gitignore  compiler.txt  global.R  instructions .txt
.github/workflows/: build-windows.yml
backend/: README.md
backend/examples/: job-config.json
backend/iramuteq_backend/: orchestrator.py
backend/r/: run_iramuteq_batch.R
help/: help.md
tauri-ui/: README.md  package-lock.json  package.json
tauri-ui/src/: app.js  index.html  styles.css
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/icons/: icon.icns
tauri-ui/src-tauri/src/: main.rs
