[package]
name = "iramuteq-lite-tauri"
version = "0.1.0"
description = "IRaMuTeQ Lite Tauri shell"
authors = ["IRaMuTeQ Lite"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
